--- a/notebooks/database/populate_db.ipynb
+++ b/notebooks/database/populate_db.ipynb
@@ -322,13 +322,10 @@
     "    Handles missing make_name entries by adding them to the make table in bulk.\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        # Extract all unique makes from the vehicle data\n",
     "        unique_makes = vehicle_data['make_name'].dropna().unique()\n",
     "\n",
-    "        # Fetch existing makes from the database\n",
     "        existing_makes = pd.read_sql(\"SELECT make_name FROM make\", conn)['make_name'].tolist()\n",
     "\n",
-    "        # Identify missing makes\n",
     "        missing_makes = [make for make in unique_makes if make not in existing_makes]\n",
     "\n",
     "        if missing_makes:\n",
@@ -337,7 +334,6 @@
     "            cursor = conn.cursor()\n",
     "            insert_query = \"INSERT INTO make (make_name) VALUES (%s)\"\n",
     "            \n",
-    "            # Insert each missing make\n",
     "            cursor.executemany(insert_query, [(make,) for make in missing_makes])\n",
     "            conn.commit()\n",
     "            cursor.close()\n",
@@ -348,62 +344,65 @@
     "        print(f\"Error in handle_missing_makes: {e}\")\n",
     "\n",
     "def prepare_vehicle_data(vehicle_data, conn, row_limit=20000):\n",
-    "    \"\"\"\n",
-    "    Prepares the vehicle data and resolves missing make_name issues.\n",
-    "    Limits the processed data to the specified row limit.\n",
-    "    \"\"\"\n",
-    "    # Step 1: Handle missing makes (process all makes, regardless of row limit)\n",
+    "\n",
     "    handle_missing_makes(vehicle_data, conn)\n",
     "\n",
-    "    # Step 2: Reload the updated make table\n",
     "    make_table = pd.read_sql(\"SELECT * FROM make\", conn)\n",
     "\n",
-    "    # Step 3: Merge make_id into vehicle_data\n",
     "    vehicle_data = vehicle_data.merge(make_table, on='make_name', how='left')\n",
     "\n",
-    "    # Step 4: Filter out rows with missing make_id\n",
     "    vehicle_data = vehicle_data[vehicle_data['make_id'].notna()]\n",
     "\n",
-    "    # Step 5: Reapply row limit\n",
     "    vehicle_data = vehicle_data.head(row_limit)\n",
     "\n",
-    "    # Step 6: Truncate long model values to match schema constraints\n",
     "    vehicle_data['model'] = vehicle_data['model'].str.slice(0, 50)\n",
     "\n",
-    "    # Step 7: Handle missing or invalid `commission_rate` values\n",
-    "    vehicle_data['commission_rate'] = vehicle_data['commission_rate'].fillna(0.0)  # Replace NaN with 0.0\n",
+    "    vehicle_data['commission_rate'] = vehicle_data['commission_rate'].fillna(0.0)  \n",
     "\n",
     "    return vehicle_data[['make_id', 'model', 'year', 'price', 'commission_rate']]\n",
     "\n",
+    "def populate_vehicle_table(vehicle_data, conn, batch_size=500):\n",
+    "    try:\n",
+    "        cursor = conn.cursor()\n",
+    "        insert_query = \"\"\"\n",
+    "        INSERT INTO vehicle (make_id, model, year, price, commission_rate) \n",
+    "        VALUES (%s, %s, %s, %s, %s)\n",
+    "        \"\"\"\n",
+    "        for start in range(0, len(vehicle_data), batch_size):\n",
+    "            batch = vehicle_data.iloc[start:start + batch_size]\n",
+    "            cursor.executemany(insert_query, batch.to_records(index=False).tolist())\n",
+    "        \n",
+    "        conn.commit()\n",
+    "        print(\"Data inserted into vehicle table successfully!\")\n",
+    "    except Error as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "    finally:\n",
+    "        cursor.close()\n",
     "\n",
-    "# Main script\n",
+    "\n",
     "conn = connect_to_db()\n",
     "\n",
     "if conn:\n",
     "    try:\n",
-    "        # Combine all datasets into a single DataFrame\n",
     "        car_dekho_vehicles = car_dekho_data[['name', 'year', 'price']].rename(columns={\n",
     "            'name': 'model', 'year': 'year', 'price': 'price'\n",
     "        })\n",
     "        car_dekho_vehicles['make_name'] = car_dekho_vehicles['model'].str.split().str[0]\n",
-    "        car_dekho_vehicles['commission_rate'] = None  # No commission rate in this dataset\n",
+    "        car_dekho_vehicles['commission_rate'] = None \n",
     "\n",
     "        used_cars_vehicles = used_cars_data[['brand', 'model', 'model_year', 'price']].rename(columns={\n",
     "            'brand': 'make_name', 'model': 'model', 'model_year': 'year', 'price': 'price'\n",
     "        })\n",
-    "        used_cars_vehicles['commission_rate'] = None  # No commission rate in this dataset\n",
+    "        used_cars_vehicles['commission_rate'] = None \n",
     "\n",
     "        sales_vehicles = clean_car_sales_data[['Car Make', 'Car Model', 'Car Year', 'Sale Price', 'Commission Rate']].rename(columns={\n",
     "            'Car Make': 'make_name', 'Car Model': 'model', 'Car Year': 'year', 'Sale Price': 'price', 'Commission Rate': 'commission_rate'\n",
     "        })\n",
     "\n",
-    "        # Combine all datasets\n",
     "        combined_vehicles = pd.concat([sales_vehicles, car_dekho_vehicles, used_cars_vehicles], ignore_index=True)\n",
     "\n",
-    "        # Prepare and clean vehicle data with row limit applied\n",
     "        vehicle_data = prepare_vehicle_data(combined_vehicles, conn, row_limit=20000)\n",
     "\n",
-    "        # Populate the vehicle table\n",
     "        populate_vehicle_table(vehicle_data, conn)\n",
     "\n",
     "    except Error as e:\n",
