--- a/notebooks/modelVehicles.ipynb
+++ b/notebooks/modelVehicles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "Rctf8xNdw3Ds"
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "id": "iQDU8xgJw3Du"
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "id": "lU8rAZEZLPYK"
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "[234757 rows x 17 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,14 +454,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x7/fc3vnzb90sdcq1ydx20l7_9h0000gq/T/ipykernel_24629/2452554659.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\Shreyas\\AppData\\Local\\Temp\\ipykernel_24448\\2452554659.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -495,8 +495,8 @@
      "text": [
       "Vehicles Dataset\n",
       "Evaluation for Price Norm:\n",
-      "Mean Squared Error: 0.03466424122264438\n",
-      "R-squared Score: 0.27713343337129415\n",
+      "Mean Squared Error: 0.034664241222644374\n",
+      "R-squared Score: 0.27713343337129437\n",
       "\n"
      ]
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -568,7 +568,7 @@
        "1           R-squared  0.277133"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
     "id": "-fOVUl5ZAT1V"
    },
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "[382444 rows x 6 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -794,14 +794,19 @@
      "output_type": "stream",
      "text": [
       "Enter the Manufacturer: \n",
+      "toyota\n",
       "\n",
       "Condition: \n",
+      "good\n",
       "\n",
       "Fuel: \n",
+      "other\n",
       "\n",
       "Odometer: \n",
+      "59030.0\n",
       "\n",
       "Transmission: \n",
+      "automatic\n",
       "\n"
      ]
     }
@@ -837,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -850,7 +855,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Sale Price for input {'manufacturer': 'gmc', 'condition': 'excellent', 'fuel': 'gas', 'odometer': 41000.0, 'transmission': 'other'}: $26795.28\n"
+      "Predicted Sale Price for input {'manufacturer': 'toyota', 'condition': 'good', 'fuel': 'other', 'odometer': 59030.0, 'transmission': 'automatic'}: $26629.35\n"
      ]
     }
    ],
@@ -862,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -904,23 +909,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>gmc</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>41000.0</td>\n",
+       "      <td>toyota</td>\n",
+       "      <td>good</td>\n",
        "      <td>other</td>\n",
-       "      <td>26795.276414</td>\n",
+       "      <td>59030.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>26629.346709</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  manufacturer  condition fuel  odometer transmission    Sale Price\n",
-       "0          gmc  excellent  gas   41000.0        other  26795.276414"
+       "  manufacturer condition   fuel  odometer transmission    Sale Price\n",
+       "0       toyota      good  other   59030.0    automatic  26629.346709"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,6 +936,127 @@
     "user_data['Sale Price'] = predicted_price\n",
     "user_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mysql.connector import connect, Error\n",
+    "import pandas as pd\n",
+    "\n",
+    "conn = None\n",
+    "\n",
+    "def connect_to_db():\n",
+    "    try:\n",
+    "        global conn\n",
+    "        conn = connect(\n",
+    "            host='localhost',\n",
+    "            user='root',\n",
+    "            password='1234',\n",
+    "            database='final'\n",
+    "        )\n",
+    "        print(\"Connection successful!\")\n",
+    "        return conn\n",
+    "    except Error as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "\n",
+    "def create_schema(conn):\n",
+    "    schema_sql = \"\"\"\n",
+    "        USE final;\n",
+    "        CREATE TABLE IF NOT EXISTS vehicles_predictor (\n",
+    "        prediction_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "        manufacturer VARCHAR(255),\n",
+    "        `condition` VARCHAR(255),\n",
+    "        fuel VARCHAR(255),\n",
+    "        odometer DOUBLE,\n",
+    "        transmission VARCHAR(255),\n",
+    "        sale_price DOUBLE\n",
+    "        );\n",
+    "        \"\"\"\n",
+    "    try:\n",
+    "        cursor = conn.cursor()\n",
+    "        # Execute schema creation SQL\n",
+    "        for result in cursor.execute(schema_sql, multi=True):\n",
+    "            if result.with_rows:\n",
+    "                print(f\"Rows returned: {result.fetchall()}\")\n",
+    "            else:\n",
+    "                print(f\"Affected {result.rowcount} rows.\")\n",
+    "        print(\"Schema created successfully.\")\n",
+    "    except Error as e:\n",
+    "        print(f\"Error creating schema: {e}\")\n",
+    "    finally:\n",
+    "        cursor.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "def connect_to_db_sqlalchemy():\n",
+    "    try:\n",
+    "        engine = create_engine(\"mysql+mysqlconnector://root:1234@localhost/final\")\n",
+    "        print(\"SQLAlchemy Engine created successfully!\")\n",
+    "        return engine\n",
+    "    except Error as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "\n",
+    "def insert_dataframe_to_table(conn, df):\n",
+    "    insert_query = \"\"\"\n",
+    "        INSERT INTO vehicles_predictor (manufacturer, `condition`, fuel, odometer, transmission, sale_price)\n",
+    "        VALUES (%s, %s, %s, %s, %s, %s)\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        cursor = conn.cursor()\n",
+    "        data = list(df.itertuples(index=False, name=None))\n",
+    "        cursor.executemany(insert_query, data)  \n",
+    "        conn.commit()\n",
+    "        print(f\"Inserted {cursor.rowcount} rows successfully.\")\n",
+    "    except Error as e:\n",
+    "        print(f\"Error inserting data: {e}\")\n",
+    "    finally:\n",
+    "        cursor.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection successful!\n",
+      "Affected 0 rows.\n",
+      "Affected 0 rows.\n",
+      "Schema created successfully.\n",
+      "Inserted 1 rows successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "conn = connect_to_db()\n",
+    "if conn:\n",
+    "    try:\n",
+    "        create_schema(conn)  \n",
+    "        insert_dataframe_to_table(conn, user_data)  \n",
+    "    finally:\n",
+    "        conn.close()\n",
+    "else:\n",
+    "    print(\"Failed to connect to the database.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -938,7 +1064,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -952,9 +1078,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
