--- a/notebooks/vehicles_data.ipynb
+++ b/notebooks/vehicles_data.ipynb
@@ -1484,7 +1484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vehicles_df.to_csv('vehicles_data.csv', index=False)"
+    "vehicles_df.to_csv('clean_vehicles_data.csv', index=False)"
    ]
   },
   {
